@@ -775,6 +775,67 @@ class LineCollection(Collection, cm.ScalarMappable):
         return self._edgecolors
     get_colors = get_color  # for compatibility with old versions
 
+class PatchCollection(Collection):
+    """
+    A generic collection of patches.
+
+    This makes it easier to assign a color map to a heterogeneous
+    collection of patches.
+
+    This also may improve plotting speed, since PatchCollection will
+    draw faster than a large number of patches.
+    """
+
+    def __init__(self, patches, match_original=False, **kwargs):
+        """
+        *patches*
+            a sequence of Patch objects.  This list may include
+            a heterogeneous assortment of different patch types.
+
+        *match_original* If True, use the colors and linewidths of the
+            original patches.  If False, new colors may be assigned by
+            providing the standard collection arguments, facecolor,
+            edgecolor, linewidths, norm or cmap.
+
+        If any of *edgecolors*, *facecolors*, *linewidths*,
+        *antialiaseds* are None, they default to their
+        :data:`matplotlib.rcParams` patch setting, in sequence form.
+
+        The use of :class:`~matplotlib.cm.ScalarMappable` is optional.
+        If the :class:`~matplotlib.cm.ScalarMappable` matrix _A is not
+        None (ie a call to set_array has been made), at draw time a
+        call to scalar mappable will be made to set the face colors.
+        """
+
+        if match_original:
+            def determine_facecolor(patch):
+                if patch.fill():
+                    return patch.get_facecolor()
+                return [0, 0, 0, 0]
+
+            facecolors   = [determine_facecolor(p) for p in patches]
+            edgecolors   = [p.get_edgecolor() for p in patches]
+            linewidths   = [p.get_linewidths() for p in patches]
+            antialiaseds = [p.get_antialiased() for p in patches]
+
+            Collection.__init__(
+                self,
+                edgecolors=edgecolors,
+                facecolors=facecolors,
+                linewidths=linewidths,
+                linestyles='solid',
+                antialiaseds = antialiaseds)
+        else:
+            Collection.__init__(self, **kwargs)
+
+        paths        = [p.get_transform().transform_path(p.get_path())
+                        for p in patches]
+
+        self._paths = paths
+
+    def get_paths(self):
+        return self._paths
+
 
 artist.kwdocd['Collection'] = patchstr = artist.kwdoc(Collection)
 for k in ('QuadMesh', 'PolyCollection', 'BrokenBarHCollection', 'RegularPolyCollection',
